# fetchpy

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: configurations.yaml  gripper_preshapes.yaml  head_preshapes.yaml
config/WaveTraj/: wave1.xml  wave2.xml
config/WaveTraj2/: wave1.xml  wave2.xml
robot_description/: fetch.gazebo.urdf  fetch.srdf
robots/: fetch.srdf
scripts/: console.py  grab_box.py  grab_box2.py  grab_box3_only_arm.py  pose_control.py
src/fetchpy/: __init__.py  arm.py  base.py  fetch.py  fetchrobot.py  gripper.py  head.py  util.py  whole_body.py
src/fetchpy/action/: __init__.py  rogue.py
tests/: arm_tests.py  hand_tests.py
