<?xml version="1.0"?>
<package>
  <name>fetchpy</name>
  <version>0.0.0</version>
  <description>The fetchpy package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="makhabhi@isu.edu">abhijit makhal</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/fetchpy</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>cbirrt2</exec_depend>
  <exec_depend>or_trajopt</exec_depend>
  <exec_depend>or_parabolicsmoother</exec_depend>
  <exec_depend>herb_description</exec_depend>
  <exec_depend>espeak</exec_depend>
  <exec_depend>prpy</exec_depend>
  <exec_depend>ipython</exec_depend>
  <exec_depend>python-argparse</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>or_urdf</exec_depend>
  <exec_depend>or_ompl</exec_depend>
  <exec_depend>or_sbpl</exec_depend>
  <exec_depend>openrave</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>tsr</exec_depend>

  <test_depend>actionlib</test_depend>
  <test_depend>actionlib_msgs</test_depend>
  <test_depend>cbirrt2</test_depend>
  <test_depend>or_trajopt</test_depend>
  <test_depend>or_parabolicsmoother</test_depend>
  <test_depend>herb_description</test_depend>
  <test_depend>espeak</test_depend>
  <test_depend>prpy</test_depend>
  <test_depend>ipython</test_depend>
  <test_depend>python-argparse</test_depend>
  <test_depend>python-numpy</test_depend>
  <test_depend>python-yaml</test_depend>
  <test_depend>or_urdf</test_depend>
  <test_depend>or_ompl</test_depend>
  <test_depend>or_sbpl</test_depend>
  <test_depend>openrave</test_depend>
  <test_depend>python-yaml</test_depend>
  <test_depend>tsr</test_depend>

  <test_depend>python-nose</test_depend>
  <test_depend>pr_ordata</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
